# courses-esudh

./: README.md
apertium-bas/: Makefile.am  README  apertium-bas.bas.lexc  apertium-bas.pc.in  configure.ac  modes.xml
apertium-bas-btc/: Makefile.am  README  apertium-bas-btc.bas-btc.dix  configure.ac  modes.xml
apertium-btc/: Makefile.am  README  apertium-btc.btc.lexc  apertium-btc.pc.in  configure.ac  modes.xml
apertium-deu/: Makefile.am  README  apertium-deu.deu.lexc  apertium-deu.pc.in  configure.ac  modes.xml
apertium-deu-fra/: configure.ac
apertium-eng/: Makefile.am  apertium-eng.eng.lexc  configure  modes.xml
apertium-fin/: Makefile.am  README  aclocal.m4  apertium-fin.fin.lexc  apertium-fin.pc.in  configure  configure.ac  modes.xml
apertium-fra/: Makefile.am  apertium-fra.fra.lexc  configure.ac  modes.xml
apertium-fra-deu/: README  apertium-fra-deu.fra-deu.dix
apertium-kat/: Makefile.am  README  apertium-kat.kat.lexc  apertium-kat.kat.twol  apertium-kat.pc.in  configure.ac  modes.xml
apertium-kat-eng/: Makefile.am  README  apertium-kat-eng.eng-kat.lrx  apertium-kat-eng.kat-eng.dix  configure.ac  modes.xml
